# recorder-example

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  binding.gyp  build.md  example.js  index.js  package-lock.json  package.json  readme.md  test.js
docs/: ar.md  mac_audio_recording.md
include/: aec_audio_unit.h  aggregate_device.h  audio_device_manager.h  audio_engine.h  audio_system_capture.h  logger.h  microphone_capture.h  ring_buffer.h  webrtc_aec_processor.h
include/audio_nodes/: audio_nodes.h
scripts/: download-deps.js  pack.js
src/: Info.plist  aec_audio_unit.mm  aggregate_device.mm  audio_device_manager.h  audio_device_manager.mm  audio_engine.mm  audio_system_capture.h  audio_system_capture.mm  av_engine_taps_main.mm  av_engine_test.h  av_engine_test.mm  av_engine_test_main.mm  core_audio_taps_test_main.mm  logger.cc  logger.cpp  mac_recorder.cpp  mac_recorder.h  mac_system_audio_node.h  mac_system_audio_node.mm  main.cc  main.cpp  mic_recorder.h  mic_recorder.mm  mic_recorder_main.mm  microphone_capture.cpp  recorder.cpp  recorder.entitlements  recorder.h  ring_buffer.cpp  ring_buffer.h  system_capture_recorder_main.mm  test_microphone.cpp  voice_processing_test.mm  webrtc_aec_processor.cpp
src/audio_nodes/: aec_audio_unit.mm  audio_nodes.mm
src/nodejs/: main_node.cpp  node_recorder.cpp  node_recorder.h  recorder_bindings.cpp
test-install/: package-lock.json  package.json  test.js
